--- a/src/styles/other.scss
+++ b/src/styles/other.scss
@@ -25,3 +25,9 @@
   cursor: pointer;
 }
 /*------common end------*/
+/*------modify element-ui start------*/
+.el-message {
+  top: 4px;
+}
+/*------modify element-ui end------*/
+
