--- a/src/styles/color.scss
+++ b/src/styles/color.scss
@@ -29,7 +29,6 @@ $btnRGBA: rgba(62, 105, 222, 0.5);
 
 $search: #1d45a0;
 
-
 $blackShade: rgba(0, 0, 0, 0.35);
 $font: #618496;
 $fontDeep: #183c4d;
@@ -47,18 +46,17 @@ $borderMain: #4270f0;
 $lineDivision: #5c7680;
 $lineBorder: rgba(27, 50, 67, 0.85);
 
-$light: rgba(20,214,255, 1);
-$lightStrong: rgba(20,214,255, .5);
+$light: rgba(20, 214, 255, 1);
+$lightStrong: rgba(20, 214, 255, .5);
 $lightLow: rgba(38, 63, 81, .5);
 $bgLight: rgba(38, 63, 81, .2);
-
 
 $red: #c55354;
 $redGrey: #f46868;
 $orange: #ff6700;
 $green: #49d96c;
 $yellow: #ffe71c;
-$purple: #9b79ff ;
+$purple: #9b79ff;
 $jasper: #79ff80;
 $greyGreen: #79feff;
 
